--- a/project/package.json
+++ b/project/package.json
@@ -3,9 +3,10 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
+    "heroku-postbulid": "ng build --prod",
     "test": "ng test"
   },
   "private": true,
@@ -20,7 +21,10 @@
     "@angular/router": "~13.3.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "@angular/cli": "~13.3.3",
+    "@angular/compiler-cli": "~13.3.0",
+    "typescript": "~4.6.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.3.3",
@@ -35,5 +39,9 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "~4.6.2"
+  },
+  "engines": {
+    "npm":"8.5.0",
+    "node": "v16.14.2."
   }
 }
